<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/products">

        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/title_home" />
            <item
                android:id="@+id/nav_categories"
                android:icon="@drawable/ic_categories"
                android:title="@string/categories" />
            <item
                android:id="@+id/nav_cart"
                android:icon="@drawable/ic_cart"
                android:title="@string/cart" />
            <item
                android:id="@+id/nav_list_order"
                android:icon="@drawable/ic_list_order"
                android:title="@string/list_order" />

        </menu>
    </item>

    <item android:title="@string/more">

        <menu>

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_aboutUs"
                android:icon="@drawable/ic_info"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/ic_info"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>