<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.afinal.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.afinal.Categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.afinal.Cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />


    <fragment
        android:id="@+id/nav_list_order"
        android:name="com.example.afinal.ListOrder.ListOrderFragment"
        android:label="@string/menu_list_order"
        tools:layout="@layout/fragment_list_order" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.afinal.Profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_aboutUs"
        android:name="com.example.afinal.AboutUs.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_privacy_policy"
        android:name="com.example.afinal.PrivacyPolicy.PrivacyPolicyFragment"
        android:label="@string/menu_privacy_policy"
        tools:layout="@layout/fragment_privacy_policy" />


</navigation>