<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_150sdp"
        android:background="@drawable/login_shape_bk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_login_bk" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_title_margin_top"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="@dimen/main_title_text_siza"
        android:fontFamily="@font/jazera"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/card_margen"
        android:layout_marginRight="@dimen/card_margen"
        android:elevation="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/card_raduies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginTop="@dimen/login_card_margen_top"
        >

        <LinearLayout
            android:id="@+id/activity_forget_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">>

            <TextView
                android:id="@+id/activity_forget_password_tv_forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/forget_password"
                android:fontFamily="@font/jazera"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/sub_title_text_size"
                android:gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                app:boxBackgroundMode="outline"
                android:hint="@string/email_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="@dimen/input_text_corner_reduise"
                app:boxCornerRadiusBottomStart="@dimen/input_text_corner_reduise"
                app:boxCornerRadiusTopEnd="@dimen/input_text_corner_reduise"
                app:boxCornerRadiusTopStart="@dimen/input_text_corner_reduise"

                >

                <EditText
                    android:id="@+id/activity_forget_password_ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:fontFamily="@font/jazera"
                    android:textSize="@dimen/input_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_forget_password_btn_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/buton_top_margen"
                android:text="@string/forget_send_to_email"
                android:textSize="@dimen/buton_text_size"
                android:textStyle="bold"
                android:fontFamily="@font/jazera"
                app:cornerRadius="@dimen/buton_corner_reduis"
                android:padding="@dimen/buton_padding"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>